--- a/bezier/src/main/res/values/colors.xml
+++ b/bezier/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="bg_grey_light">@color/grey200</color>
     <color name="bg_grey_lighter">@color/grey100</color>
     <color name="bg_grey_lightest">@color/grey50</color>
+    <color name="inverted_bg_grey_lighter">@color/grey800</color>
 
     <color name="bg_black_darkest">@color/black_60</color>
     <color name="bg_black_darker">@color/black_40</color>
