--- a/bezier/src/main/res/values/colors.xml
+++ b/bezier/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
     <color name="txt_black_darkest">@color/black_85</color>
     <color name="txt_black_darker">@color/black_60</color>
     <color name="txt_black_dark">@color/black_40</color>
+    <color name="inverted_txt_black_darkest">@color/white_80</color>
 
     <!-- dim -->
     <color name="bg_white_dim_dark">@color/white_60</color>
