--- a/bezier/src/main/res/values/colors.xml
+++ b/bezier/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="bg_grey_lightest">@color/grey50</color>
     <color name="inverted_bg_grey_lighter">@color/grey800</color>
 
+    <color name="bg_grey_dim_lightest">@color/grey50_80</color>
+    <color name="inverted_bg_grey_dim_lightest">@color/grey850_80</color>
+
     <color name="bg_black_darkest">@color/black_60</color>
     <color name="bg_black_darker">@color/black_40</color>
     <color name="bg_black_dark">@color/black_15</color>
