--- a/bezier/src/main/res/values/color_palettes.xml
+++ b/bezier/src/main/res/values/color_palettes.xml
@@ -1,213 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- blue -->
-
-    <color name="blue500">#4E40C9</color>
-
-    <color name="blue400">#5E56F0</color>
-    <color name="blue400_30">#4D5E56F0</color>
-    <color name="blue400_20">#335E56F0</color>
-    <color name="blue400_10">#1A5E56F0</color>
-
-    <color name="blue300">#6687FF</color>
-    <color name="blue300_40">#666687FF</color>
-    <color name="blue300_30">#4D6687FF</color>
-    <color name="blue300_20">#336687FF</color>
-
-
-    <!-- cobalt -->
-
-    <color name="cobalt500">#327AB8</color>
-
-    <color name="cobalt400">#329BE7</color>
-    <color name="cobalt400_30">#4D329BE7</color>
-    <color name="cobalt400_20">#33329BE7</color>
-    <color name="cobalt400_10">#1A329BE7</color>
-
-    <color name="cobalt300">#47C8FF</color>
-    <color name="cobalt300_40">#6647C8FF</color>
-    <color name="cobalt300_30">#4D47C8FF</color>
-    <color name="cobalt300_20">#3347C8FF</color>
-
-
-    <!-- teal -->
-
-    <color name="teal500">#449C8A</color>
-
-    <color name="teal400">#0FB3A3</color>
-    <color name="teal400_30">#4D0FB3A3</color>
-    <color name="teal400_20">#330FB3A3</color>
-    <color name="teal400_10">#1A0FB3A3</color>
-
-    <color name="teal300">#3CDDCD</color>
-    <color name="teal300_40">#663CDDCD</color>
-    <color name="teal300_30">#4D3CDDCD</color>
-    <color name="teal300_20">#333CDDCD</color>
-
-
-    <!-- green -->
-
-    <color name="green500">#41904F</color>
-
-    <color name="green400">#31A552</color>
-    <color name="green400_30">#4D31A552</color>
-    <color name="green400_20">#3331A552</color>
-    <color name="green400_10">#1A31A552</color>
-
-    <color name="green300">#3ACF5A</color>
-    <color name="green300_40">#663ACF5A</color>
-    <color name="green300_30">#4D3ACF5A</color>
-    <color name="green300_20">#333ACF5A</color>
-
-
-    <!-- olive -->
-
-    <color name="olive500">#818628</color>
-
-    <color name="olive400">#A0A540</color>
-    <color name="olive400_30">#4DA0A540</color>
-    <color name="olive400_20">#33A0A540</color>
-    <color name="olive400_10">#1AA0A540</color>
-
-    <color name="olive300">#CAD548</color>
-    <color name="olive300_40">#66CAD548</color>
-    <color name="olive300_30">#4DCAD548</color>
-    <color name="olive300_20">#33CAD548</color>
-
-
-    <!-- yellow -->
-
-    <color name="yellow500">#C39E37</color>
-
-    <color name="yellow400">#EDBC40</color>
-    <color name="yellow400_30">#4DEDBC40</color>
-    <color name="yellow400_20">#33EDBC40</color>
-    <color name="yellow400_10">#1AEDBC40</color>
-
-    <color name="yellow300">#FDD353</color>
-    <color name="yellow300_40">#66FDD353</color>
-    <color name="yellow300_30">#4DFDD353</color>
-    <color name="yellow300_20">#33FDD353</color>
-
-
-    <!-- orange -->
-
-    <color name="orange500">#C57417</color>
-
-    <color name="orange400">#F4800B</color>
-    <color name="orange400_30">#4DF4800B</color>
-    <color name="orange400_20">#33F4800B</color>
-    <color name="orange400_10">#1AF4800B</color>
-
-    <color name="orange300">#FFAB5C</color>
-    <color name="orange300_40">#66FFAB5C</color>
-    <color name="orange300_30">#4DFFAB5C</color>
-    <color name="orange300_20">#33FFAB5C</color>
-
-
-    <!-- red -->
-
-    <color name="red500">#AC3E46</color>
-
-    <color name="red400">#E94E58</color>
-    <color name="red400_30">#4DE94E58</color>
-    <color name="red400_20">#33E94E58</color>
-    <color name="red400_10">#1AE94E58</color>
-
-    <color name="red300">#FF5C5C</color>
-    <color name="red300_40">#66FF5C5C</color>
-    <color name="red300_30">#4DFF5C5C</color>
-    <color name="red300_20">#33FF5C5C</color>
-
-
-    <!-- pink -->
-
-    <color name="pink500">#A32E92</color>
-
-    <color name="pink400">#CB48AD</color>
-    <color name="pink400_30">#4DCB48AD</color>
-    <color name="pink400_20">#33CB48AD</color>
-    <color name="pink400_10">#1ACB48AD</color>
-
-    <color name="pink300">#EC6FD3</color>
-    <color name="pink300_40">#66EC6FD3</color>
-    <color name="pink300_30">#4DEC6FD3</color>
-    <color name="pink300_20">#33EC6FD3</color>
-
-
-    <!-- purple -->
-
-    <color name="purple500">#6B23B3</color>
-
-    <color name="purple400">#915CE0</color>
-    <color name="purple400_30">#4D915CE0</color>
-    <color name="purple400_20">#33915CE0</color>
-    <color name="purple400_10">#1A915CE0</color>
-
-    <color name="purple300">#B570FF</color>
-    <color name="purple300_40">#66B570FF</color>
-    <color name="purple300_30">#4DB570FF</color>
-    <color name="purple300_20">#33B570FF</color>
-
-
-    <!-- navy -->
-
-    <color name="navy500">#333D5B</color>
-
-    <color name="navy400">#3A4F8D</color>
-    <color name="navy400_30">#4D3A4F8D</color>
-    <color name="navy400_20">#333A4F8D</color>
-    <color name="navy400_10">#1A3A4F8D</color>
-
-    <color name="navy300">#647CC9</color>
-    <color name="navy300_40">#66647CC9</color>
-    <color name="navy300_30">#4D647CC9</color>
-    <color name="navy300_20">#33647CC9</color>
-
-
-    <!-- grey -->
-
-    <color name="grey900">#242428</color>
-    <color name="grey850">#2A2B2D</color>
-    <color name="grey800">#313234</color>
-    <color name="grey800_80">#CC313234</color>
-    <color name="grey700">#464748</color>
-    <color name="grey700_80">#CC464748</color>
-    <color name="grey500">#A7A7AA</color>
-    <color name="grey200">#EFEFF0</color>
-    <color name="grey200_80">#CCEFEFF0</color>
-    <color name="grey100">#F7F7F8</color>
-    <color name="grey100_80">#CCF7F7F8</color>
-    <color name="grey50">#FCFCFC</color>
-
-
-    <!--  black -->
-
-    <color name="black">#000000</color>
-    <color name="black_85">#D9000000</color>
-    <color name="black_60">#99000000</color>
-    <color name="black_40">#66000000</color>
-    <color name="black_30">#4D000000</color>
-    <color name="black_22">#38000000</color>
-    <color name="black_20">#33000000</color>
-    <color name="black_15">#26000000</color>
-    <color name="black_8">#14000000</color>
-    <color name="black_5">#0D000000</color>
-    <color name="black_3">#08000000</color>
-    <color name="black_0">#00000000</color>
-
-
-    <!-- white -->
-
-    <color name="white">#FFFFFF</color>
-    <color name="white_90">#E6FFFFFF</color>
-    <color name="white_80">#CCFFFFFF</color>
-    <color name="white_60">#99FFFFFF</color>
-    <color name="white_40">#66FFFFFF</color>
-    <color name="white_20">#33FFFFFF</color>
-    <color name="white_12">#1FFFFFFF</color>
-    <color name="white_8">#14FFFFFF</color>
-    <color name="white_5">#0DFFFFFF</color>
-    <color name="white_0">#00FFFFFF</color>
-
+    <color name="blue100">#ffb2b7ff</color>
+    <color name="blue200">#ff8d93ff</color>
+    <color name="blue3000">#006b6eff</color>
+    <color name="blue30010">#1a6b6eff</color>
+    <color name="blue30018">#2e6b6eff</color>
+    <color name="blue30030">#4d6b6eff</color>
+    <color name="blue30045">#736b6eff</color>
+    <color name="blue300">#ff6b6eff</color>
+    <color name="blue4000">#006157ea</color>
+    <color name="blue4005">#0d6157ea</color>
+    <color name="blue40010">#1a6157ea</color>
+    <color name="blue40020">#336157ea</color>
+    <color name="blue40030">#4d6157ea</color>
+    <color name="blue400">#ff6157ea</color>
+    <color name="blue500">#ff5139d9</color>
+    <color name="blue600">#ff4134bb</color>
+    <color name="cobalt100">#ffa1d5ff</color>
+    <color name="cobalt200">#ff8dcafc</color>
+    <color name="cobalt3000">#005cadef</color>
+    <color name="cobalt30010">#1a5cadef</color>
+    <color name="cobalt30018">#2e5cadef</color>
+    <color name="cobalt30030">#4d5cadef</color>
+    <color name="cobalt30045">#735cadef</color>
+    <color name="cobalt300">#ff5cadef</color>
+    <color name="cobalt4000">#003292e3</color>
+    <color name="cobalt4005">#0d3292e3</color>
+    <color name="cobalt40010">#1a3292e3</color>
+    <color name="cobalt40020">#333292e3</color>
+    <color name="cobalt40030">#4d3292e3</color>
+    <color name="cobalt400">#ff3292e3</color>
+    <color name="cobalt500">#ff3176d1</color>
+    <color name="cobalt600">#ff2b59b5</color>
+    <color name="green100">#ffa4ecb3</color>
+    <color name="green200">#ff7cd985</color>
+    <color name="green3000">#004bc16c</color>
+    <color name="green30010">#1a4bc16c</color>
+    <color name="green30018">#2e4bc16c</color>
+    <color name="green30030">#4d4bc16c</color>
+    <color name="green30045">#734bc16c</color>
+    <color name="green300">#ff4bc16c</color>
+    <color name="green4000">#0020ab55</color>
+    <color name="green4005">#0d20ab55</color>
+    <color name="green40010">#1a20ab55</color>
+    <color name="green40020">#3320ab55</color>
+    <color name="green40030">#4d20ab55</color>
+    <color name="green400">#ff20ab55</color>
+    <color name="green500">#ff358761</color>
+    <color name="green600">#ff327055</color>
+    <color name="red100">#ffffb8b8</color>
+    <color name="red200">#ffff8683</color>
+    <color name="red3000">#00f26060</color>
+    <color name="red30010">#1af26060</color>
+    <color name="red30018">#2ef26060</color>
+    <color name="red30030">#4df26060</color>
+    <color name="red30045">#73f26060</color>
+    <color name="red300">#fff26060</color>
+    <color name="red4000">#00e1535d</color>
+    <color name="red4005">#0de1535d</color>
+    <color name="red40010">#1ae1535d</color>
+    <color name="red40020">#33e1535d</color>
+    <color name="red40030">#4de1535d</color>
+    <color name="red400">#ffe1535d</color>
+    <color name="red500">#ffbc3a42</color>
+    <color name="red600">#ff992c34</color>
+    <color name="orange100">#ffffc38f</color>
+    <color name="orange200">#ffffab70</color>
+    <color name="orange3000">#00f79847</color>
+    <color name="orange30010">#1af79847</color>
+    <color name="orange30018">#2ef79847</color>
+    <color name="orange30030">#4df79847</color>
+    <color name="orange30045">#73f79847</color>
+    <color name="orange300">#fff79847</color>
+    <color name="orange4000">#00e67f2b</color>
+    <color name="orange4005">#0de67f2b</color>
+    <color name="orange40010">#1ae67f2b</color>
+    <color name="orange40020">#33e67f2b</color>
+    <color name="orange40030">#4de67f2b</color>
+    <color name="orange400">#ffe67f2b</color>
+    <color name="orange500">#ffc1630d</color>
+    <color name="orange600">#ffa1540c</color>
+    <color name="yellow100">#ffffe38f</color>
+    <color name="yellow200">#fffed968</color>
+    <color name="yellow3000">#00f0be27</color>
+    <color name="yellow30010">#1af0be27</color>
+    <color name="yellow30018">#2ef0be27</color>
+    <color name="yellow30030">#4df0be27</color>
+    <color name="yellow30045">#73f0be27</color>
+    <color name="yellow300">#fff0be27</color>
+    <color name="yellow4000">#00edae0d</color>
+    <color name="yellow4005">#0dedae0d</color>
+    <color name="yellow40010">#1aedae0d</color>
+    <color name="yellow40020">#33edae0d</color>
+    <color name="yellow40030">#4dedae0d</color>
+    <color name="yellow400">#ffedae0d</color>
+    <color name="yellow500">#ffc38f00</color>
+    <color name="yellow600">#ff9e7504</color>
+    <color name="olive100">#ffe7f17c</color>
+    <color name="olive200">#ffdbe56e</color>
+    <color name="olive3000">#00b7c427</color>
+    <color name="olive30010">#1ab7c427</color>
+    <color name="olive30018">#2eb7c427</color>
+    <color name="olive30030">#4db7c427</color>
+    <color name="olive30045">#73b7c427</color>
+    <color name="olive300">#ffb7c427</color>
+    <color name="olive4000">#00a9b110</color>
+    <color name="olive4005">#0da9b110</color>
+    <color name="olive40010">#1aa9b110</color>
+    <color name="olive40020">#33a9b110</color>
+    <color name="olive40030">#4da9b110</color>
+    <color name="olive400">#ffa9b110</color>
+    <color name="olive500">#ff7b801c</color>
+    <color name="olive600">#ff65691c</color>
+    <color name="teal100">#ff9beee6</color>
+    <color name="teal200">#ff72e0d5</color>
+    <color name="teal3000">#0040d3c5</color>
+    <color name="teal30010">#1a40d3c5</color>
+    <color name="teal30018">#2e40d3c5</color>
+    <color name="teal30030">#4d40d3c5</color>
+    <color name="teal30045">#7340d3c5</color>
+    <color name="teal300">#ff40d3c5</color>
+    <color name="teal4000">#0009b2ac</color>
+    <color name="teal4005">#0d09b2ac</color>
+    <color name="teal40010">#1a09b2ac</color>
+    <color name="teal40020">#3309b2ac</color>
+    <color name="teal40030">#4d09b2ac</color>
+    <color name="teal400">#ff09b2ac</color>
+    <color name="teal500">#ff068e95</color>
+    <color name="teal600">#ff06687d</color>
+    <color name="navy100">#ffa5b2ee</color>
+    <color name="navy200">#ff8b99d9</color>
+    <color name="navy3000">#006f7bc8</color>
+    <color name="navy30010">#1a6f7bc8</color>
+    <color name="navy30018">#2e6f7bc8</color>
+    <color name="navy30030">#4d6f7bc8</color>
+    <color name="navy30045">#736f7bc8</color>
+    <color name="navy300">#ff6f7bc8</color>
+    <color name="navy4000">#00424fab</color>
+    <color name="navy4005">#0d424fab</color>
+    <color name="navy40010">#1a424fab</color>
+    <color name="navy40020">#33424fab</color>
+    <color name="navy40030">#4d424fab</color>
+    <color name="navy400">#ff424fab</color>
+    <color name="navy500">#ff353888</color>
+    <color name="navy600">#ff22245b</color>
+    <color name="purple100">#ffd1b5ff</color>
+    <color name="pink100">#ffffafef</color>
+    <color name="pink200">#fff392e0</color>
+    <color name="pink3000">#00ec6fd3</color>
+    <color name="pink30010">#1aec6fd3</color>
+    <color name="pink30018">#2eec6fd3</color>
+    <color name="pink30030">#4dec6fd3</color>
+    <color name="pink30045">#73ec6fd3</color>
+    <color name="pink300">#ffec6fd3</color>
+    <color name="pink4000">#00d64bb5</color>
+    <color name="pink4005">#0dd64bb5</color>
+    <color name="pink40010">#1ad64bb5</color>
+    <color name="pink40020">#33d64bb5</color>
+    <color name="pink40030">#4dd64bb5</color>
+    <color name="pink400">#ffd64bb5</color>
+    <color name="pink500">#ffb0369e</color>
+    <color name="pink600">#ff962c86</color>
+    <color name="purple200">#ffc19aff</color>
+    <color name="purple3000">#00a970ff</color>
+    <color name="purple30010">#1aa970ff</color>
+    <color name="purple30018">#2ea970ff</color>
+    <color name="purple30030">#4da970ff</color>
+    <color name="purple30045">#73a970ff</color>
+    <color name="purple300">#ffa970ff</color>
+    <color name="purple4000">#008e57e7</color>
+    <color name="purple4005">#0d8e57e7</color>
+    <color name="purple40010">#1a8e57e7</color>
+    <color name="purple40020">#338e57e7</color>
+    <color name="purple40030">#4d8e57e7</color>
+    <color name="purple400">#ff8e57e7</color>
+    <color name="purple500">#ff6735b6</color>
+    <color name="purple600">#ff54278f</color>
+    <color name="grey50">#fffbfbfb</color>
+    <color name="greyAlpha5080">#ccfbfbfb</color>
+    <color name="greyAlpha10080">#ccf7f7f8</color>
+    <color name="greyAlpha10090">#e5f7f7f8</color>
+    <color name="greyAlpha20080">#ccefeff0</color>
+    <color name="greyAlpha20090">#e5efeff0</color>
+    <color name="greyAlpha70080">#cc464748</color>
+    <color name="greyAlpha70090">#e5464748</color>
+    <color name="greyAlpha80080">#cc313234</color>
+    <color name="greyAlpha80090">#e5313234</color>
+    <color name="greyAlpha85080">#cc2a2b2d</color>
+    <color name="greyAlpha85090">#e52a2b2d</color>
+    <color name="greyAlpha90090">#e5242428</color>
+    <color name="white0">#00ffffff</color>
+    <color name="black0">#00000000</color>
+    <color name="black1">#03000000</color>
+    <color name="black3">#08000000</color>
+    <color name="black5">#0d000000</color>
+    <color name="black8">#14000000</color>
+    <color name="black15">#26000000</color>
+    <color name="black20">#33000000</color>
+    <color name="black22">#38000000</color>
+    <color name="black30">#4d000000</color>
+    <color name="black40">#66000000</color>
+    <color name="black50">#80000000</color>
+    <color name="black60">#99000000</color>
+    <color name="black70">#b2000000</color>
+    <color name="black85">#d9000000</color>
+    <color name="black100">#ff000000</color>
+    <color name="white3">#08ffffff</color>
+    <color name="white5">#0dffffff</color>
+    <color name="white8">#14ffffff</color>
+    <color name="white12">#1fffffff</color>
+    <color name="white20">#33ffffff</color>
+    <color name="white22">#38ffffff</color>
+    <color name="white30">#4dffffff</color>
+    <color name="white40">#66ffffff</color>
+    <color name="white50">#80ffffff</color>
+    <color name="white60">#99ffffff</color>
+    <color name="white80">#ccffffff</color>
+    <color name="white90">#e5ffffff</color>
+    <color name="white100">#ffffffff</color>
+    <color name="grey100">#fff7f7f8</color>
+    <color name="grey200">#ffefeff0</color>
+    <color name="grey300">#ffe2e2e4</color>
+    <color name="grey400">#ffcfcfd1</color>
+    <color name="grey500">#ffa7a7aa</color>
+    <color name="grey600">#ff7b7b7b</color>
+    <color name="grey700">#ff464748</color>
+    <color name="grey800">#ff313234</color>
+    <color name="grey850">#ff2a2b2d</color>
+    <color name="grey900">#ff242428</color>
+    <color name="grey950">#ff1a1a1c</color>
+    <color name="grey9000">#00242428</color>
 </resources>
